--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -39,3 +39,4 @@
 @import 'components/navDocumentation';
 @import 'components/swagger';
 @import 'components/tabs';
+@import 'components/apiSubscription.scss'
