--- a/daikoku/javascript/src/style/components/apiSubscription.scss
+++ b/daikoku/javascript/src/style/components/apiSubscription.scss
@@ -1,3 +1,18 @@
+@keyframes pulseBig {
+  0% {
+    opacity: 0.5;
+  }
+
+  70% {
+    opacity: 0;
+    transform: scale(1.6);
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
 .api-subscription {
   position: relative;
   width: 70%;
@@ -5,24 +20,30 @@
   gap: 1rem;
 
 
-  border: 1px solid $level1_link-color;
+  border: 1px solid $level3_text-color;
+  background-color: $level3_bg-color;
   border-radius: 0.375rem;
-  padding: 1rem;
+  padding: 1rem 1rem 0 1rem;
+
+  .api-subscription__container {
+    display: flex;
+    margin-bottom: 1rem;
+  }
 
   .api-subscription__icon {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 1rem;
+    width: 18%;
 
     grid-column-start: first;
     grid-column-end: infos;
     grid-row: main;
 
-    svg {
-      // color: $success-color;
-      height: 3rem;
-      width: 3rem;
+    i.icon {
+      font-size: 2rem;
+      margin-bottom: 0.375rem;
     }
 
     .api-subscription__value__type {
@@ -34,21 +55,44 @@
       line-height: 1rem;
       padding: .35rem .75rem;
 
-      &:after {
-        content: '';
-        margin-left: .5rem;
-        display: inline-block;
-        width: 1rem;
-        height: 1rem;
-        border-radius: 50%;
+    }
+
+    .dot {
+      display: block;
+      margin-right: 10px;
+      width: 15px;
+      height: 15px;
+      border-radius: 15px;
+      position: relative;
+      margin-left: .5rem;
+
+      &.enabled {
         background-color: $success-color;
       }
+
+      &.disabled {
+        background-color: $error-color;
+      }
+    }
+
+    .dot::before {
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      animation: pulseBig 2s infinite;
+      opacity: 1;
+      border-radius: 50%;
+      top: 0;
+      left: 0;
+      background-color: inherit;
     }
   }
 
   .api-subscription__infos {
     display: flex;
     flex-direction: column;
+    gap: 2px;
 
     .api-subscription__infos__name {
       font-weight: bold;
@@ -63,9 +107,9 @@
     }
   }
 
-    .api-subscriptions__links {
-      font-size: .75rem;
-    }
+  .api-subscriptions__links {
+    font-size: .75rem;
+  }
 
 
 }
