--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -1,13 +1,14 @@
-
 .navbar-brand {
   font-size: 18px;
 }
 
-a.navbar-brand, #teamSelector:hover {
-  color:$sidebar-text-color;
-} 
+a.navbar-brand,
+#teamSelector:hover {
+  color: $sidebar-text-color;
+}
 
-.navbar .Select.has-value.Select--single > .Select-control .Select-value .Select-value-label, .Select.has-value.is-pseudo-focused.Select--single > .Select-control .Select-value .Select-value-label {
+.navbar .Select.has-value.Select--single>.Select-control .Select-value .Select-value-label,
+.Select.has-value.is-pseudo-focused.Select--single>.Select-control .Select-value .Select-value-label {
   color: #fff;
 }
 
@@ -18,6 +19,7 @@ a.navbar-brand, #teamSelector:hover {
 
 .logo-anonymous {
   border-radius: 50%;
+
   &:hover {
     cursor: pointer;
   }
@@ -26,18 +28,32 @@ a.navbar-brand, #teamSelector:hover {
 .dropdown-menu {
   background-color: $level3_bg-color;
 }
+
 .dropdown-item {
-  color:$level3_link-color;
+  color: $level3_link-color;
+
   &:hover {
     background-color: $level3_link-hover-bg-color;
     color: $level3_link-hover-color
   }
+
+  &.danger {
+    color: $danger-color;
+
+    &:hover {
+        background-color: $danger-color;
+        color: #fff;
+      }
+  }
 }
-.dropdown-divider{
-  border-color:  $level3_link-color;
+
+.dropdown-divider {
+  border-color: $level3_link-color;
 
 }
-.add-member-select, .general-search{
+
+.add-member-select,
+.general-search {
   width: 400px;
 }
 
@@ -45,16 +61,18 @@ a.navbar-brand, #teamSelector:hover {
   z-index: 100;
 }
 
-.period-select:hover>div,.general-search:hover>div,.add-member-select:hover>div{
+.period-select:hover>div,
+.general-search:hover>div,
+.add-member-select:hover>div {
   cursor: pointer !important;
 }
 
-.general-search>div{
+.general-search>div {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   background-color: $form-bg-color;
-  color:$form-text-color;
-  border-color:$form-border-color;
+  color: $form-text-color;
+  border-color: $form-border-color;
 }
 
 .full-width-select {
@@ -63,7 +81,7 @@ a.navbar-brand, #teamSelector:hover {
 
 .navbar-toggle {
   @media screen and (min-width: 768px) {
-      display: none;
+    display: none;
   }
 }
 
@@ -109,8 +127,9 @@ a.navbar-brand, #teamSelector:hover {
 
   &.opened {
     width: calc(75vw - 55px);
-    overflow-y: auto;      
-    @media screen and (min-width:768px){
+    overflow-y: auto;
+
+    @media screen and (min-width:768px) {
       width: calc(35vw - 55px);
     }
   }
@@ -118,10 +137,11 @@ a.navbar-brand, #teamSelector:hover {
   .navbar-panel__back {
     height: 40px;
     width: 40px;
+
     &:hover {
       border-radius: 50%;
-      background-color:   $companion_text-hover-bg-color;  
-      color: var( --companion-link-hover-text-color);
+      background-color: $companion_text-hover-bg-color;
+      color: var(--companion-link-hover-text-color);
     }
   }
 }
@@ -131,7 +151,8 @@ a.navbar-brand, #teamSelector:hover {
   width: 0;
   height: 100vh;
   z-index: 1000;
-  top: 0; right: 0;
+  top: 0;
+  right: 0;
   background-color: #000;
   opacity: 0.3;
   width: 0;
@@ -140,7 +161,8 @@ a.navbar-brand, #teamSelector:hover {
 
   &.opened {
     width: 25vw;
-    @media screen and (min-width:768px){
+
+    @media screen and (min-width:768px) {
       width: 65vw;
     }
   }
@@ -157,6 +179,7 @@ a.navbar-brand, #teamSelector:hover {
         font-weight: 600;
         font-size: 12px;
       }
+
       .block__entries {
         .block__entry__link {
           cursor: pointer;
@@ -166,6 +189,7 @@ a.navbar-brand, #teamSelector:hover {
           line-height: 40px;
           border-radius: 4px;
           padding-left: .5rem;
+
           &:hover {
             background-color: $companion_text-hover-bg-color;
             color: $companion_text-hover-color;
@@ -186,7 +210,8 @@ a.navbar-brand, #teamSelector:hover {
   height: 100vh;
   position: relative;
   min-width: 20px;
-  width: 20px; height: 100vh;
+  width: 20px;
+  height: 100vh;
   transition: width .2s ease-in-out;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 
@@ -219,7 +244,7 @@ a.navbar-brand, #teamSelector:hover {
       color: $companion_text-color;
       font-weight: 600;
 
-      h3{
+      h3 {
         white-space: normal;
         word-break: break-word;
       }
@@ -228,7 +253,7 @@ a.navbar-brand, #teamSelector:hover {
 
     .blocks {
       flex-grow: 1;
-      
+
       .block {
         .block__entries {
           .block__entry__link {
@@ -239,9 +264,10 @@ a.navbar-brand, #teamSelector:hover {
             line-height: 40px;
             border-radius: 4px;
             padding-left: .5rem;
+
             &.active {
               background-color: $companion_text-hover-bg-color;
-              color:$companion_text-hover-color;
+              color: $companion_text-hover-color;
             }
 
             &.disabled {
@@ -272,12 +298,12 @@ a.navbar-brand, #teamSelector:hover {
               background-color: $companion_text-hover-bg-color;
               color: $companion_text-hover-color;
             }
-            
+
             &.disabled {
               color: lighten(#000, 50%);
               cursor: default;
             }
-            
+
             &:hover {
               // border-bottom: 1px solid $companion_text-hover-bg-color;
               background-color: $companion_text-hover-bg-color;
@@ -295,8 +321,12 @@ a.navbar-brand, #teamSelector:hover {
   }
 
   .companion-button {
-    position: absolute; top: 20px; right: -12px; z-index: 1000;
-    width: 24px; height: 24px;
+    position: absolute;
+    top: 20px;
+    right: -12px;
+    z-index: 1000;
+    width: 24px;
+    height: 24px;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -328,7 +358,7 @@ a.navbar-brand, #teamSelector:hover {
 }
 
 
-.page__menu__entry{
+.page__menu__entry {
   cursor: pointer;
   font-size: 14px;
   color: $sidebar-text-color;
@@ -336,6 +366,7 @@ a.navbar-brand, #teamSelector:hover {
   line-height: 40px;
   border-radius: 4px;
   padding-left: .5rem;
+
   &.active {
     background-color: $companion_text-hover-bg-color;
     color: $companion_text-hover-color;
