--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -50,7 +50,7 @@ a:hover {
   color: $level1_link-hover-color;
 }
 
-.underline-on-hover:hover {
+.underline-on-hover:hover, .underline {
   text-decoration: underline;
 }
 
