--- a/daikoku/public/themes/brutalism.css
+++ b/daikoku/public/themes/brutalism.css
@@ -1,70 +1,58 @@
 :root {
-  /* colors*/
-    --error-color: #dc3545;
-    --info-color: #17a2b8;
-    --success-color: #65B741;
-    --warning-color: #ffc107;
-    --danger-color: #dc3545;
+  --body_bg-color: pink;
+  --body_text-color: green;
+  --body_link-color:red;
+  --body_link-hover-color:yellow;
+  
+  --level2_bg-color: orange;
+  --level2_text-color: blue;
+  --level2_link-color: red;
+  --level2_link-hover-color: brown;
 
-  /*level 1*/
-
-  --body_bg-color: FireBrick;
-  --body_text-color: DarkTurquoise;
-  --body_link-color: Cyan;
-  --body_link-hover-color: LightCyan;
-
-  /*level 2*/
-  --level2_bg-color: SandyBrown;
-  --level2_text-color: Wheat;
-  --level2_link-color: Sienna;
-  --level2_link-hover-color: Brown;
-
-  /*level 3*/
-  --level3_bg-color: BlanchedAlmond;
-  --level3_text-color: SandyBrown;
+  --level3_bg-color : #bbd700;
+  --level3_text-color : #222;
   --level3_link-color: #4c4c4d;
-  --level3_link-hover-color: grey;
-  --level3_link-hover-bg-color: white;
+  --level3_link-hover-color : #000;
+  --level3_link-hover-bg-color :grey;
 
-  /*sidebar*/
-  --sidebar-bg-color: PeachPuff;
-  --sidebar-text-color: DarkKhaki;
-  --sidebar-text-hover-color: PaleGoldenrod;
+  --sidebar-bg-color: beige;
+  --sidebar-text-color: brown;
+  --sidebar-text-hover-color:orange;      
 
-  /*companion*/
-  --menu-bg-color: DarkOrange;
-  --menu-text-color: OrangeRed;
-  --menu-text-hover-bg-color: SlateGray;
-  --menu-text-hover-color: white;
-  --menu-link-color: DimGray;
+  --menu-bg-color: #fba979;
+  --menu-text-color: #ac6407;
+  --menu-text-hover-bg-color: cadetblue;
+  --menu-text-hover-color: yellow;
+  --menu-divider-color: grey;     
 
+  --card_header-bg-color : indigo;
+  --card_header-text-color: gold;
+  --card_bg-color: lavender;
+  --card_text-color: black;
+  --card_link-color: lightseagreen;
+  --card_link-hover-color : lime;
+  
+  --btn-bg-color: #fff;
+  --btn-text-color: #495057;
+  --btn-border-color: #97b0c7;
 
-  /* NEW cards */
-  --card_header-bg-color: DarkGreen;
-  --card_header-text-color: white;
-  --card_bg-color: YellowGreen;
-  --card_text-color: white;
-  --card_link-color: olive;
-  --card_link-hover-color: orange;
-
-  /*btns*/
-  --btn-bg-color: MediumPurple;
-  --btn-text-color: Yellow;
-  --btn-border-color: Violet;
-
-  /*badge*/
   --badge-tags-bg-color: #ffc107;
   --badge-tags-bg-hover-color: #ffe1a7;
   --badge-tags-text-color: #212529;
 
-  /*form*/
-  --form-text-color: white;
-  --form-border-color: white;
-  --form-bg-color: black;
+  --form-text-color: #000;
+  --form-border-color: #586069;
+  --form-bg-color: #ff5e8c;
 
-  --form-select-focused-color: red;
-  --form-select-focused-text-color: green;
+  --form-select-focused-color: lightgrey;
+  --form-select-focused-text-color: white;
   --form-select-heading-color: yellow;
-  --form-select-hover-color: black;
-  --form-select-hover-text-color: brown;
+  --form-select-hover-color: lightgrey;
+  --form-select-hover-text-color: white;
+
+  --error-color:#dc3545;
+  --info-color: #17a2b8;
+  --success-color: #65B741;
+  --warning-color: #ffc107;
+  --danger-color: #dc3545;  
 }
