FIX front - new apikeyKey card

--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -6,6 +6,7 @@
 @import 'layout/navbar';
 @import 'layout/login';
 @import 'layout/footer.scss';
+@import 'layout/rightPanel.scss';
 
 @import "components/antCalandar";
 @import 'components/avatarWithAction';
