--- a/daikoku/javascript/src/style/components/apiSubscription.scss
+++ b/daikoku/javascript/src/style/components/apiSubscription.scss
@@ -24,6 +24,7 @@
   background-color: $level3_bg-color;
   border-radius: 0.375rem;
   padding: 1rem 1rem 0 1rem;
+  margin-bottom: 10px;
 
   .api-subscription__container {
     display: flex;
@@ -100,10 +101,14 @@
 
     .api-subscription__infos__value {
       font-size: 12px;
+      word-break: break-all;
     }
 
     .api-subscription__infos__state {
       color: $success-color;
+    }
+    .api-subscription__infos__creation {
+      font-size: 12px;
     }
   }
 
