change default color for card link

--- a/daikoku/public/themes/light.css
+++ b/daikoku/public/themes/light.css
@@ -29,8 +29,8 @@
   --card_header-text-color: #fff;
   --card_bg-color: #282828;
   --card_text-color: #fff;
-  --card_link-color: #ffe1a7;
-  --card_link-hover-color : #ffc107;
+  --card_link-color: #97b0c7;
+  --card_link-hover-color : #a9cbea;
 
   --btn-bg-color: #fff;
   --btn-text-color: #495057;
