--- a/daikoku/javascript/src/style/variables.scss
+++ b/daikoku/javascript/src/style/variables.scss
@@ -57,8 +57,8 @@ $card-header-bg-color : #{"var(--card_header-bg-color, #404040)"};
 $card-header-text-color : #{"var(--card-header-text-color, #fff)"};
 $card-bg-color:  #{"var(--card_bg-color, #282828)"};
 $card-text-color: #{"var(--card_text-color, #FFF)"};
-$card-link-color: #{"var(--card_link-color, #b3b3b3)"};
-$card-link-hover-color:  #{"var(--card_link-hover-color, orange)"};
+$card-link-color: #{"var(--card_link-color, #97b0c7)"};
+$card-link-hover-color:  #{"var(--card_link-hover-color, #a9cbea)"};
 
 :export {
   successColor: $success-color;
