--- a/daikoku/public/themes/dark.css
+++ b/daikoku/public/themes/dark.css
@@ -28,9 +28,9 @@
   --card_header-bg-color : #404040;
   --card_header-text-color: #fff;
   --card_bg-color: #282828;
-  --card_text-color: #fff;
-  --card_link-color: #ffe1a7;
-  --card_link-hover-color : #ffc107;
+  --card_text-color: #fff; 
+  --card_link-color: #97b0c7;
+  --card_link-hover-color : #a9cbea;
   
   --btn-bg-color: #fff;
   --btn-text-color: #495057;
