--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -233,10 +233,10 @@ a.navbar-brand,
     flex-direction: column;
 
     .companion-title {
-      min-height: 40px;
+      // min-height: 40px;
       margin-bottom: 1rem;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      // overflow: hidden;
+      // text-overflow: ellipsis;
       white-space: nowrap;
       line-height: 1.14286;
       color: $companion_text-color;
