--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -41,7 +41,8 @@ a {
   color: $level1_link-color;
 }
 
-.a-fake, a {
+.a-fake,
+a {
   &.underline {
     text-decoration: underline;
   }
@@ -56,7 +57,8 @@ a:hover {
   color: $level1_link-hover-color;
 }
 
-.underline-on-hover:hover, .underline {
+.underline-on-hover:hover,
+.underline {
   text-decoration: underline;
 }
 
@@ -257,4 +259,44 @@ img:hover+.changePicture,
 
 .flew-grow {
   flex: 1;
+}
+
+.pill-button--small {
+  background: $level3_bg-color;
+  padding: .1rem;
+  border-radius: 24px;
+  width: fit-content;
+}
+
+.pill-button--small .pill-mode {
+  min-width: 90px;
+}
+
+.pill-mode {
+  font-size: 1rem;
+  border: none;
+  padding: .25rem 0;
+  text-align: center;
+  background: none;
+  z-index: 21;
+  position: relative;
+  min-width: 115px;
+}
+
+.pill-mode-right {
+  left: calc(50% - 4px) !important;
+  width: 50% !important;
+}
+
+.pill-cursor {
+  transition: left 0.25s;
+  position: absolute;
+  background-color: $level1_bg-color;
+  color: $level1_text-color;
+  top: 4px;
+  bottom: 4px;
+  left: 4px;
+  border-radius: 24px;
+  width: calc(50%);
+  z-index: 20;
 }
