--- a/daikoku/javascript/src/style/layout/rightPanel.scss
+++ b/daikoku/javascript/src/style/layout/rightPanel.scss
@@ -1,22 +1,20 @@
 .right-panel-container {
+  position: absolute;
   height: 100vh;
-  // background-color: $navbar-bg-color;
-  // position: 'relative';
-  // color: $navbar-text-color;
-
-
-  .right-panel {
-    height: 100%;
-    width: 0;
-    min-height: 300px;
-    overflow-y: hidden;
+  width: 0;
+  overflow: hidden;
+  
+  &.opened {
+    width: 100vw;
+    top: 0; bottom: 0;
+    left: 0; right: 0;
   }
 }
 
 .right-panel {
-  position: absolute;
-  overflow: hidden;
-  width: 0;
+  position: relative;
+  overflow: scroll;
+  width: 100%;
   height: 100vh;
   z-index: 10000;
   top: 0;
@@ -25,15 +23,6 @@
   color: $companion_text-color;
   filter: brightness(105%);
   transition: width .2s ease-in-out;
-
-  &.opened {
-    width: calc(75vw);
-    overflow-y: auto;
-
-    @media screen and (min-width:768px) {
-      width: calc(35vw);
-    }
-  }
 
   .right-panel__back {
     height: 40px;
@@ -51,7 +40,7 @@
 }
 
 .right-panel-background {
-  position: absolute;
+  position: relative;
   width: 0;
   height: 100vh;
   z-index: 1000;
@@ -64,10 +53,6 @@
   transition: width .2s ease-in-out;
 
   &.opened {
-    width: 25vw;
-
-    @media screen and (min-width:768px) {
-      width: 65vw;
-    }
+    width: 100%;
   }
 }
