--- a/daikoku/javascript/src/style/components/btn.scss
+++ b/daikoku/javascript/src/style/components/btn.scss
@@ -5,31 +5,32 @@ button {
 }
 
 .btn-outline {
-  color: $btn-bg-color !important; 
-  background-color: $btn-text-color !important; 
-  border-color: $btn-bg-color !important; 
+  color: $btn-bg-color !important;
+  background-color: $btn-text-color !important;
+  border-color: $btn-bg-color !important;
 
   &:hover {
-    color: $btn-bg-color !important; 
-    background-color: $btn-text-color !important; 
+    color: $btn-bg-color !important;
+    background-color: $btn-text-color !important;
   }
 
   &-primary {
-    color: $btn-text-color !important; 
-    border-color: $btn-border-color !important; 
-    background-color: $btn-bg-color !important; 
+    color: $btn-text-color !important;
+    border-color: $btn-border-color !important;
+    background-color: $btn-bg-color !important;
 
     // , :not(.btn-check) + .btn:active
-    &.active,&:active{
+    &.active,
+    &:active {
       color: $btn-bg-color !important;
       background-color: $btn-border-color !important;
       border-color: $btn-border-color !important;
     }
 
     &:hover {
-      color: $btn-bg-color !important; 
-      background-color: $btn-border-color !important; 
-    border-color: $btn-border-color !important; 
+      color: $btn-bg-color !important;
+      background-color: $btn-border-color !important;
+      border-color: $btn-border-color !important;
 
     }
   }
@@ -224,4 +225,41 @@ button {
     color: $companion_text-hover-color;
     border-color: $companion_text-hover-bg-color;
   }
+}
+
+.form-selector {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  margin-bottom: 5px;
+
+  .btn {
+    background-color: #fff !important;
+    border-color: #9e9e9e !important;
+
+    &:hover {
+      background-color: #ccc !important;
+    }
+
+    .description {
+      color: #9e9e9e;
+    }
+
+    .label {
+      font-weight: bold;
+      font-size: 16px;
+      color: #9e9e9e;
+    }
+
+    &.active {
+      border-color: $info-color !important;
+      border-width: 2px;
+
+      .label {
+        color: $info-color;
+      }
+    }
+
+  }
+
 }
