--- a/daikoku/javascript/src/style/components/btn.scss
+++ b/daikoku/javascript/src/style/components/btn.scss
@@ -232,6 +232,7 @@ button {
   flex-direction: row;
   gap: 1rem;
   margin-bottom: 5px;
+  margin-right: 40px;
 
   .btn {
     background-color: #fff !important;
