--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -190,9 +190,18 @@ a.navbar-brand,
           border-radius: 4px;
           padding: .5rem;
 
+          &.danger {
+            color: $danger-color
+          }
+
           &:hover {
             background-color: $companion_text-hover-bg-color;
             color: $companion_text-hover-color;
+
+            &.danger {
+              background-color: $danger-color;
+              color: $companion_text-hover-color;
+            }
           }
         }
       }
