mini fix - do not write operation when no stripe product - add more piece of accessibility - better confirm modal work all time

--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -398,3 +398,11 @@ a.navbar-brand,
     width: 100%;
   }
 }
+
+button.nav_item {
+  background-color: transparent;
+  margin: 0;
+  border: none;
+  // all: unset;
+  cursor: pointer;
+}
