--- a/daikoku/javascript/src/style/components/consumptions.scss
+++ b/daikoku/javascript/src/style/components/consumptions.scss
@@ -83,21 +83,13 @@
     justify-content: center;
     align-items: flex-start;
 
-    color: $level2_text-color;
-    background-color: $level2_bg-color;
-    font-family: Arial, Helvetica, "Open Sans", sans-serif, monospace;
+    color: $card-header-text-color;
+    background-color: $card-header-bg-color;
+    // font-family: Arial, Helvetica, "Open Sans", sans-serif, monospace;
     //font-size: 25pt;
     text-align: center;
     overflow-wrap: break-word;
     word-break: break-word;
     hyphens: auto;
-  }
-
-  .card-body {
-    border: none;
-    background-color: $level1_bg-color;
-    margin: 0;
-    height: 250px;
-    overflow: scroll;
   }
 }
