new UI for api pricing card

--- a/daikoku/javascript/src/style/components/apicard.scss
+++ b/daikoku/javascript/src/style/components/apicard.scss
@@ -129,9 +129,14 @@ a.card-link:active {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  color: $card-header-bg-color;
 
   &:hover {
     background-color: $card-header-bg-color;
+
+    &:before {
+      color: $card-header-text-color;
+    }
   }
 
   &:before {
