--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -40,4 +40,5 @@
 @import 'components/navDocumentation';
 @import 'components/swagger';
 @import 'components/tabs';
-@import 'components/apiSubscription.scss'
+@import 'components/apiSubscription.scss';
+@import 'components/pricingCard.scss';
