--- a/daikoku/javascript/src/style/components/pricingCard.scss
+++ b/daikoku/javascript/src/style/components/pricingCard.scss
@@ -3,10 +3,17 @@
   background-color: $level3_bg-color;
   border-radius: 1rem;
 
-  width: 25%;
+  width: calc(25% - 15px);
 
   display: flex;
   flex-direction: column;
+
+  .dropdown-menu-button {
+    color: $card-header-bg-color;
+    &:hover {
+      color: color-mix(in srgb, var(--card-header-bg-color, #404040), white 30%);
+    }
+  }
 
   .usage-plan__card__header {
     padding: 1rem 1rem 1.5rem 1rem;
@@ -39,11 +46,27 @@
       border-radius: 5px;
       padding: 10px;
 
+      position: relative;
+
       &:hover {
         color: $card-header-bg-color;
         background-color: $card-header-text-color;
 
         box-shadow: 3px 3px 0 $card-header-bg-color;
+      }
+
+      &.inactive {
+        pointer-events: none;
+
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: rgba(255, 255, 255, 0.2);
+        }
       }
 
       &:focus,
@@ -59,6 +82,54 @@
   .usage-plan__card__body {
     flex: 1;
     padding: 0rem 1rem .5rem 1rem;
+
+    .usage-plan__card__action-button {
+        align-self: flex-end;
+    
+        // margin: 5px 10px;
+        width: 100%;
+        background-color: $card-header-bg-color;
+        color: $card-header-text-color;
+        border: 1px solid $level2_text-color;
+        border-radius: 5px;
+        padding: .5rem;
+    
+        position: relative;
+
+        display: flex;
+        justify-content: center;
+
+        width: fit-content;
+    
+        &:hover {
+          color: $card-header-bg-color;
+          background-color: $card-header-text-color;
+    
+          box-shadow: 3px 3px 0 $card-header-bg-color;
+        }
+    
+        &.inactive {
+          cursor: not-allowed;
+    
+          &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.2);
+          }
+        }
+    
+        &:focus,
+        &:active {
+          color: $card-header-bg-color;
+          background-color: $card-header-text-color;
+          box-shadow: 1px 1px 0 $card-header-bg-color;
+          transform: translate(2px, 2px);
+        }
+      }
 
 
 
@@ -104,3 +175,22 @@
     }
   }
 }
+
+@media screen and (max-width: 1350px) {
+  .usage-plan__card {
+      width: calc(33% - 20px); 
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .usage-plan__card {
+      width: calc(50% - 10px);
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .usage-plan__card {
+      width: 100%;
+  }
+}
+
